--- a/Resume.html
+++ b/Resume.html
@@ -13,7 +13,7 @@
       <p>Окончил школу№146 г.Перми. Учусь в МФТИ на ФИВТе.</p>
     </div>
     <div class = "contacts">
-      <p>Телеграмм: https://t.me/LordProtoss</p>
+      <p>Телеграмм: <a href = "https://t.me/LordProtoss">https://t.me/LordProtoss</a></p>
       <p>Других контактов нет и не будет.</p>
     </div>
   </body>
