--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 <html>
   <head>
     <meta charset = "utf-8">
-    <link rel = "stylesheet" type = "text/css" href = "Resume.css">
-    <title>Резюме - Иван Воробьев</title>
+    <title>JS</title>
+    <script type="text/javascript" src="jquery-3.2.1.js"></script>
   </head>
   <body>
-    <div class = "about">
-      <p>Студент МФТИ.</p>
-    </div>
-    <div class = "experience">
-      <p>Окончил школу№146 г.Перми. Учусь в МФТИ на ФИВТе.</p>
-    </div>
-    <div class = "contacts">
-      <p>Телеграмм: <a href = "https://t.me/LordProtoss">https://t.me/LordProtoss</a></p>
-      <p>Других контактов нет и не будет.</p>
-    </div>
+      <div id = "root">
+      </div>
+      <script src="app.js" defer></script>
   </body>
 </html>
