--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body>
       <div id = "root">
       </div>
-      <script src="app.js" defer></script>
+      <script src="app.js"></script>
   </body>
 </html>
