--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset = "utf-8">
     <title>JS</title>
-    <script type="text/javascript" src="jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
   </head>
   <body>
       <div id = "root">
       </div>
-      <script src="app.js"></script>
+      <script src="app.js">
+      </script>
   </body>
 </html>
