--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <title>JS</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="jquery-3.2.1.js"></script>
   </head>
   <body>
       <div id = "root">
