--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
       <div id = "root">
       </div>
-      <script type="text/javascript" src="app.js">
+      <script type="text/javascript" src="app.js" defer>
       </script>
   </body>
 </html>
